--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "google-gemini-php/client": "^2.5",
         "symfony/http-client": "^7.3",
         "nyholm/psr7": "^1.8",
-        "psr/http-client": "^1.0"
+        "psr/http-client": "^1.0",
+        "nesbot/carbon": "^3.10"
     },
     "config": {
         "allow-plugins": {
